--- a/assets/index.html
+++ b/assets/index.html
@@ -8,18 +8,20 @@
 		<link rel="stylesheet" href="css/style.css">
 		<!-- load dependencies -->
 		<!-- Underscore, Backbone, jQuery -->
-		<script src="assets/js/dependencies/underscore-min.js"></script>
-		<script src="assets/js/dependencies/backbone-min.js"></script>
-		<script src="assets/js/dependencies/jquery.min.js"></script>
+		<script src="js/dependencies/jquery.min.js"></script>
+		<script src="js/dependencies/underscore-min.js"></script>
+		<script src="js/dependencies/backbone-min.js"></script>
 		<!-- load scripts -->
-		<script src="assets/js/test-view.js"></script>
+		<script src="js/test-view.js"></script>
+		<script src="models/user.js"></script>
 	</head>
 	<body>
 		<script type="text/template" id="test-template">
 			<h1>Create a user</h1>
 			<input type="text" id="test_username" /><br />
 			<input type="password" id="test_password" /><br />
-			<input type="button" id="test_button" value="Submit" />
+			<input type="button" id="test_button" value="Submit" /><br />
+			<h1>Welcome, <%= username_var %>.</h1>
 		</script>
 		<div id="test-view"></div>
 	</body>
