--- a/assets/index.html
+++ b/assets/index.html
@@ -11,18 +11,28 @@
 		<script src="js/dependencies/jquery.min.js"></script>
 		<script src="js/dependencies/underscore-min.js"></script>
 		<script src="js/dependencies/backbone-min.js"></script>
-		<!-- load scripts -->
-		<script src="js/test-view.js"></script>
-		<script src="models/user.js"></script>
+		<!-- load app -->
+		<script src="js/app/bootload.js"></script>
+		<!-- load views -->
+		<script src="js/views/user-form.js"></script>
+		<script src="js/views/users.js"></script>
+		<script src="js/views/user.js"></script>
+		<!-- load models -->
+		<script src="js/models/user.js"></script>
+		<!-- load collections -->
+		<script src="js/collections/users.js"></script>
 	</head>
 	<body>
-		<script type="text/template" id="test-template">
+		<!-- load templates -->
+		<script type="text/template" id="user-template">
+			<h1>Welcome, <%= user.get("username") %> <a href="javascript:void(0);">delete</a></h1>
+		</script>
+		<script type="text/template" id="user-form-template">
 			<h1>Create a user</h1>
 			<input type="text" id="test_username" /><br />
-			<input type="password" id="test_password" /><br />
 			<input type="button" id="test_button" value="Submit" /><br />
-			<h1>Welcome, <%= username_var %>.</h1>
 		</script>
-		<div id="test-view"></div>
+		<div id="user-form-view"></div>
+		<div id="user-view"></div>
 	</body>
 </html>
