router and architecture design

--- a/assets/index.html
+++ b/assets/index.html
@@ -11,18 +11,20 @@
 		<script src="js/dependencies/jquery.min.js"></script>
 		<script src="js/dependencies/underscore-min.js"></script>
 		<script src="js/dependencies/backbone-min.js"></script>
-		<!-- load app -->
+		<!-- load bootloader -->
 		<script src="js/app/bootload.js"></script>
-		<!-- load views -->
-		<script src="js/views/user-form.js"></script>
-		<script src="js/views/employee-form.js"></script>
-		<script src="js/views/employees.js"></script>
-		<script src="js/views/employee.js"></script>
 		<!-- load models -->
 		<script src="js/models/user.js"></script>
 		<script src="js/models/employee.js"></script>
 		<!-- load collections -->
 		<script src="js/collections/employees.js"></script>
+		<!-- load views -->
+		<script src="js/views/user-form.js"></script>
+		<script src="js/views/employee-form.js"></script>
+		<script src="js/views/employees.js"></script>
+		<script src="js/views/employee.js"></script>
+		<!-- load routes -->
+		<script src="js/router/router.js"></script>
 	</head>
 	<body>
 		<!-- load templates -->
@@ -40,6 +42,6 @@
 			<input type="text" id="employee_name" /><br />
 			<input type="button" id="employee_button" value="Submit" /><br />
 		</script>
-		<div id="login-form-view"></div>
+		<!-- end templates -->
 	</body>
 </html>
