--- a/assets/index.html
+++ b/assets/index.html
@@ -8,5 +8,10 @@
 		<script data-main="js/main" src="js/lib/require/require.js"></script>
 	</head>
 	<body>
+		<div id="login-form-view"></div>
+		<div id="register-form-view"></div>
+		<div id="employee-form-view"></div>
+		<div id="employee-list-view"></div>
+		<div id="employee-detail-view"></div>
 	</body>
 </html>
